// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/svelte.js rollup watching should generate updated output 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,6 +1,10 @@
  Object {
+   "assets/app.css": "/* packages/svelte/test/output/rollup/input/app.css */
+ .mc043115d5_nope {
+     color: blue;
+ }",
    "output.js": "function noop() {}
  
  function assign(tar, src) {
  	for (var k in src) tar[k] = src[k];
  	return tar;
@@ -150,19 +154,21 @@
  	_mount,
  	_differs
  };
  
  /* packages\\\\svelte\\\\test\\\\output\\\\rollup\\\\input\\\\app.html generated by Svelte v2.16.1 */
+ 
  
+ 
  function create_main_fragment(component, ctx) {
  	var div;
  
  	return {
  		c() {
  			div = createElement(\\"div\\");
  			div.textContent = \\"Hi\\";
- 			div.className = \\"css.nope\\";
+ 			div.className = \\"mc043115d5_nope\\";
  		},
  
  		m(target, anchor) {
  			insert(target, div, anchor);
  		},
`;

exports[`/svelte.js rollup watching should generate updated output when composition changes 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -173,11 +173,11 @@
  
  	return {
  		c() {
  			div = createElement(\\"div\\");
  			div.textContent = \\"Hi\\";
- 			div.className = \\"mc8c3b9f40_b mc7c0d2c82_a\\";
+ 			div.className = \\"mc8c3b9f40_c mc7c0d2c82_a\\";
  		},
  
  		m(target, anchor) {
  			insert(target, div, anchor);
  		},
`;
